# papagai

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
claude_do/: __init__.py  __main__.py  cli.py  markdown.py  worktree.py
claude_do/primers/: code.md
claude_do/tasks/c/: floats-are-0.0.md
claude_do/tasks/generic/: review.md
claude_do/tasks/meson/: meson.build-indentation-fixes.md
claude_do/tasks/python/: update-to-3.9.md
completion/bash/: papagai
completion/zsh/: _papagai
doc/: .gitignore  README.md  commands.rst  concepts.rst  conf.py  index.rst  installation.rst
doc/_static/: .gitkeep
doc/_templates/: .gitkeep
papagai/: __init__.py  __main__.py  cli.py  cmd.py  markdown.py  py.typed  tracker_tui.py  tracking.py  worktree.py
papagai/primers/: review.md
papagai/tasks/c/: floats-are-0.0.md
papagai/tasks/meson/: meson.build-indentation-fixes.md
papagai/tasks/python/: update-to-3.10.md
papagai/tasks/security/: audit.md
test/: __init__.py  test_branch_option.py  test_cli.py  test_keep_option.py  test_markdown.py  test_merge_reviews.py  test_mr_versioning.py  test_task_loading.py  test_tracker_tui.py  test_tracking.py  test_worktree.py
