[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-do"
dynamic = ["version"]
description = "A CLI tool to run Claude on git worktrees with automated commits"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "click>=8.0",
]
authors = [
    {name = "Peter Hutterer", email = "peter.hutterer@who-t.net"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
claude-do = "claude_do:claude_do"

[project.urls]
Homepage = "https://github.com/whot/claude-instructions"
Repository = "https://github.com/whot/claude-instructions"

[tool.hatch.version]
path = "claude_do/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["claude_do"]
include = [
    "claude_do/instructions/**/*.md",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
